# mutual_edge

./: .gitignore  CMakeLists.txt  GA.c  README.md  cloud.c  common.h  conf.c  conf_gasgen.c  conf_gastask.c  gasgen.c  gasgen.h  gastask.c  gastask.conf.tmpl  gastask.h  gen_netcommander.c  gen_network.c  gen_task.c  net_commander.c  network.c  offloadingratio.c  repeat_run_avg.sh  report.c  run.sh  run_extend.sh  task.c
dataset/realistic/Candy Factory/: mutual_hybrid_local.txt  private.txt  public.txt
dataset/realistic/IoT/: mutual_hybrid_local.txt  private.txt  public.txt
dataset/realistic/RSM/: mutual_hybrid_local.txt  private.txt  public.txt
dataset/synthetic/: mutual_hybrid_local.txt  private.txt  public.txt
secure_sgx/: CMakeLists.txt  attsdoc.c  bootstrap.sh  build_enclave.sh  credentials.c  enclave.c  gateway.c  gateway_client.c  gateway_client.h  iiot_device.c  iot_device.c  run_enclave.sh  test-enclave-policy.json  transmit.c  transmit.h
trust_model/: README.md
trust_model/fabric-network/: README.md  docker-compose.yaml
trust_model/fabric-network/chaincode/: mileage_cc.go
trust_model/fabric-network/config/: configtx.yaml  crypto-config.yaml
trust_model/fabric-network/scripts/: deploy_cc.sh  generate.sh  start.sh
trust_model/telemetry/: README.md  demo_producer.py  docker-compose.yaml  otel-collector-config.yaml
trust_model/telemetry/output/: README.md
trust_model/transparency-log/: README.md  docker-compose.yaml  log_query.sh  log_submit.sh
